--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -16,5 +16,13 @@ pipeline {
           }
         }
       }
+
+      stage('Package') {
+        steps {
+          script {
+            sh 'echo "Packaging the stage"'
+          }
+        }
+      }
   }
 }
