--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -24,5 +24,22 @@ pipeline {
           }
         }
       }
+
+      stage {'Deploy'} {
+        steps {
+          script {
+            sh 'echo "Deploying application..."'
+          }
+        }
+      }
+
+      stage {'Clean Up'} {
+        steps {
+          script {
+            sh 'echo "Cleaning up"'
+          }
+        }
+      }
+
   }
 }
