--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -33,7 +33,7 @@ pipeline {
         }
       }
 
-      stage {'Clean Up'} {
+      stage {'Clean-Up'} {
         steps {
           script {
             sh 'echo "Cleaning up"'
