--- a/Inventory/dev.yml
+++ b/Inventory/dev.yml
@@ -1,15 +1,16 @@
-[tooling]
-<Tooling-Web-Server-Private-IP-Address>
+# [tooling]
+# <Tooling-Web-Server-Private-IP-Address>
 
-[todo]
-<Todo-Web-Server-Private-IP-Address>
+
+# [db:vars]
+# ansible_user=ec2-user
+# ansible_python_interpreter=/usr/bin/python
 
 [nginx]
-<Nginx-Private-IP-Address>
-
-[db:vars]
-ansible_user=ec2-user
-ansible_python_interpreter=/usr/bin/python
+172.31.7.54 ansible_ssh_user='ec2-user'
 
 [db]
-<DB-Server-Private-IP-Address>
+172.31.4.148 ansible_ssh_user='ubuntu'
+
+# [todo]
+# 172.31.23.209 ansible_ssh_user='ec2-user'
