--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -1,45 +1,47 @@
 pipeline {
-  agent any
+    agent any
 
-  stages {
-      stage('Build') {
-        steps {
-          script {
-            sh 'echo "Buillding stage"'
+    environment {
+        ANSIBLE_CONFIG="${WORKSPACE}/deploy/ansible.cfg"
+    }
+
+    parameters {
+      string(name: 'inventory', defaultValue: 'dev', description: 'This is the inventory of the file for the environment to deploy configuration')
+    }
+
+    stages {
+        stage('Initial stage') {
+            steps {
+                dir("${WORKSPACE}") {
+                  deleteDir()
+                }
+            }
+        }
+
+        stage("Checkout SCM") {
+            steps {
+                git branch: 'main', url 'https://github.com/Goddhi/Ansible-Config-MGT2.git'
+            }
+        }
+
+        stage('Prepare Ansible For Execution') {
+          steps {
+              sh 'echo ${WORKSPACE}'
+              sh 'sed -i "3 a roles_path=${WORKSPACE}/roles" ${WORKSPACE}/deploy/ansible.cfg'
           }
         }
-      }
-      stage('Test') {
-        steps {
-          script {
-            sh 'echo "Testing the stage"'
-          }
-        }
-      }
 
-      stage('Package') {
-        steps {
-          script {
-            sh 'echo "Packaging the stage"'
-          }
+        stage('Run Annsible Playbook') {
+            steps {
+                ansiblePlaybook credentialsId: 'private-key', disableHostKeyChecking: true, installation: 'ansible2', inventory: 'inventory/dev.yml', playbook: 'playbooks/site.yml'
+            }
         }
-      }
 
-      stage ('Deploy') {
-        steps {
-          script {
-            sh 'echo "Deploying application..."'
-          }
+        stage('Clean Workspace after build') {
+            steps {
+                cleanWs(cleanWhenAborted: true, cleanWhenFailure: true, clanWhenNotBuilt: true. deleteDirs: true)
+            }
         }
-      }
-
-      stage ('Clean-Up') {
-        steps {
-          script {
-            sh 'echo "Cleaning up"'
-          }
-        }
-      }
-
-  }
+    }
+   
 }
