--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -33,7 +33,7 @@ pipeline {
 
         stage('Run Ansible playbook') {
             steps {
-                ansiblePlaybook colorized: true, credentialsId: 'private-key', disableHostKeyChecking: true, installation: 'ansible', inventory: 'inventory/dev.yml', playbook: 'playbooks/site.yml'
+                ansiblePlaybook colorized: true, credentialsId: 'private-key', disableHostKeyChecking: true, installation: 'ansible2', inventory: 'inventory/dev.yml', playbook: 'playbooks/site.yml'
             }
         }
 
