--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -1,8 +1,8 @@
 
----
-- hosts: db
-- name: database assignment
-  import_playbook: ../static-assignments/database.yml
+# ---
+# - hosts: db
+# - name: database assignment
+#   import_playbook: ../static-assignments/database.yml
 
 # ---
 # - hosts: all
@@ -24,8 +24,12 @@
 
 
 
-- hosts: nginx
-- name: nginx assignment
-  import_playbook: ../static-assignments/nginx.yml
+# - hosts: nginx
+# - name: nginx assignment
+#   import_playbook: ../static-assignments/nginx.yml
+
+- hosts: artifactory
+- name: artifactory assignment
+  import_playbook: ../static-assignments/artifactory.yml
 
 
