--- a/inventory/ci.yml
+++ b/inventory/ci.yml
@@ -7,5 +7,5 @@
 [sonarqube]
 <SonarQube-Private-IP-Address>
 
-[artifact_repository]
-<Artifact_repository-Private-IP-Address>
+[artifactory]
+184.73.10.6
