--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -1,8 +1,8 @@
 
-# ---
-# - hosts: db
-# - name: database assignment
-#   import_playbook: ../static-assignments/database.yml
+---
+- hosts: db
+- name: database assignment
+  import_playbook: ../static-assignments/database.yml
 
 # ---
 # - hosts: all
@@ -28,8 +28,8 @@
 # - name: nginx assignment
 #   import_playbook: ../static-assignments/nginx.yml
 
-- hosts: artifactory
-- name: artifactory assignment
-  import_playbook: ../static-assignments/artifactory.yml
+# - hosts: artifactory
+# - name: artifactory assignment
+#   import_playbook: ../static-assignments/artifactory.yml
 
 
