--- a/inventory/dev.yml
+++ b/inventory/dev.yml
@@ -6,8 +6,8 @@
 # ansible_user=ec2-user
 # ansible_python_interpreter=/usr/bin/python
 
-[nginx]
-172.31.7.54 ansible_ssh_user='ec2-user'
+# [nginx]
+# 172.31.7.54 ansible_ssh_user='ec2-user'
 
 [db]
 172.31.4.148 ansible_ssh_user='ubuntu'
