--- a/inventory/ci.yml
+++ b/inventory/ci.yml
@@ -4,8 +4,9 @@
 [nginx]
 <Nginx-Private-IP-Address>
 
-[sonarqube]
-<SonarQube-Private-IP-Address>
+[sonar]
+172.31.60.207 ansible_ssh_user='ubuntu'
 
 [artifactory]
 172.31.90.217 ansible_ssh_user='ec2-user'
+
