--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -1,7 +1,7 @@
 ---
-- hosts: todo
-- name: Deploy the todo application
-  import_playbook: ../static-assignments/deployment.yml
+# - hosts: todo
+# - name: Deploy the todo application
+#   import_playbook: ../static-assignments/deployment.yml
  
 # - hosts: db
 # - name: database assignment
@@ -36,3 +36,6 @@
 #   import_playbook: ../static-assignments/artifactory.yml
 
 
+- hosts: sonar
+- name: sonarqube server
+  import_playbook: ../static-assignments/sonar.yml
