--- a/inventory/ci.yml
+++ b/inventory/ci.yml
@@ -1,12 +1,12 @@
-[jenkins]
-<Jenkins-Private-IP-Address>
+# [jenkins]
+# <Jenkins-Private-IP-Address>
 
-[nginx]
-<Nginx-Private-IP-Address>
+# [nginx]
+# <Nginx-Private-IP-Address>
 
 [sonar]
 172.31.60.207 ansible_ssh_user='ubuntu'
 
-[artifactory]
-172.31.90.217 ansible_ssh_user='ec2-user'
+# [artifactory]
+# 172.31.90.217 ansible_ssh_user='ec2-user'
 
