--- a/roles/sonarqube/tasks/sonarqube-setup.yml
+++ b/roles/sonarqube/tasks/sonarqube-setup.yml
@@ -34,8 +34,8 @@
     path: /opt/sonarqube-7.9.3.zip
     state: absent
 
-- name: add user to run sonar
-  shell: useradd -c "user to run SonarQube" -d /opt/sonarqube -g sonar sonar 
+# - name: add user to run sonar
+#   shell: useradd -c "user to run SonarQube" -d /opt/sonarqube -g sonar sonar 
 
 - name: change ownership
   shell: chown sonar:sonar /opt/sonarqube -R
